# OpenNextion-SKU-ONX3248G035

./: README.md  README.zh-CN.md
Drawings/: ONX3248G035_2D_File.dwg
Example Programs/ESP-Arduino/01_touch_test/: 01_touch_test.ino  README_en.md  README_zh.md
Example Programs/ESP-Arduino/02_music_test/: 02_music_test.ino  BoardConfig.h  README_en.md  README_zh.md  build_opt.h  sketch.yaml
Example Programs/ESP-Arduino/03_sd_card_image_test/: 03_sd_card_image_test.ino  README_en.md  README_zh.md  build_opt.h
Example Programs/ESP-Arduino/04_sd_card_test/: 04_sd_card_test.ino  BoardConfig.h  README_en.md  README_zh.md
Example Programs/ESP-IDF/: NOTICE  README.md
Example Programs/ESP-IDF/02_music_test/components/gui/: CMakeLists.txt  gui_hal.c  gui_music_main.c
Example Programs/ESP-IDF/02_music_test/components/gui/assets/: img_lv_demo_music_btn_corner_large.c  img_lv_demo_music_btn_list_pause.c  img_lv_demo_music_btn_list_pause_large.c  img_lv_demo_music_btn_list_play_large.c  img_lv_demo_music_btn_loop.c  img_lv_demo_music_btn_loop_large.c  img_lv_demo_music_btn_next.c  img_lv_demo_music_btn_next_large.c  img_lv_demo_music_btn_pause_large.c  img_lv_demo_music_btn_play.c  img_lv_demo_music_btn_play_large.c  img_lv_demo_music_btn_prev.c  img_lv_demo_music_btn_prev_large.c  img_lv_demo_music_btn_rnd.c  img_lv_demo_music_btn_rnd_large.c  img_lv_demo_music_corner_left.c  img_lv_demo_music_corner_left_large.c  img_lv_demo_music_corner_right_large.c  img_lv_demo_music_cover_1.c  img_lv_demo_music_icon_1_large.c  img_lv_demo_music_icon_2_large.c  img_lv_demo_music_icon_3_large.c  img_lv_demo_music_icon_4_large.c  img_lv_demo_music_list_border.c  img_lv_demo_music_list_border_large.c  img_lv_demo_music_slider_knob_large.c  img_lv_demo_music_wave_bottom_large.c  img_lv_demo_music_wave_top_large.c
Example Programs/ESP-IDF/02_music_test/components/gui/include/: gui_hal.h  gui_music_list.h
Example Programs/ESP-IDF/05_wifi_test/components/gui/: CMakeLists.txt  gui.c
Example Programs/ESP-IDF/05_wifi_test/components/gui/font/: left_handle.c  wifi_closed_20.c  wifi_closed_28.c  wifi_dropdown_icom_18px.c  wifi_lab.c  wifi_on_28.c
Example Programs/ESP-IDF/05_wifi_test/components/gui/include/: gui.h
Example Programs/ESP-IDF/09_outofbox_demo/components/board/: CMakeLists.txt  board.c  board_audio.c  board_exio.c  board_lcd.c  board_lvgl.c  board_microphone.c  board_rtc.c  board_sdcard.c  board_touch.c  board_uart.c  board_wifi.c  lcd_st7796u.c  lv_fs_port.c  sht4x.c  touch_cst826.c
Example Programs/ESP-IDF/09_outofbox_demo/components/board/include/: board.h  board_audio.h  board_exio.h  board_lcd.h  board_lvgl.h  board_microphone.h  board_rtc.h  board_sdcard.h  board_touch.h  board_uart.h  board_wifi.h  sht4x.h  touch_cst826.h
Example Programs/ESP-IDF/09_outofbox_demo/components/gui/: CMakeLists.txt  app_ui_task.c
Example Programs/ESP-IDF/09_outofbox_demo/components/gui/include/: app_ui_task.h
Example Programs/ESP-IDF/09_outofbox_demo/components/gui/widgets/: lv_demo_widgets.c  lv_demo_widgets.h
(+140 files in other folders)
