idf_component_register(SRCS "board.c" 
                            "board_rtc.c" 
                            "board_audio.c" 
                            "board_exio.c" 
                            "lcd_st7796u.c" 
                            "board_lcd.c" 
                            "touch_cst826.c" 
                            "board_touch" 
                            "board_lvgl" 
                            "board_sdcard.c" 
                            "lv_fs_port.c" 
                            "board_uart.c"
                            "sht4x.c"
                            "board_wifi.c"
                        INCLUDE_DIRS "include"
                        REQUIRES "driver" 
                                 "nvs_flash" 
                                 "esp_adc" 
                                 "esp_lcd" 
                                 "lvgl" 
                                 "esp_wifi"
                                 "espressif__esp_lvgl_port" 
                                 "espressif__esp_lcd_touch" 
                                 "fatfs" 
                                 ) 
